# tree-sitter-fusor

./: .gitignore  Cargo.toml  Package.swift  build.bat  example-file.fusor  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  test.bat
bindings/c/: tree-sitter-fusor.h  tree-sitter-fusor.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts
bindings/python/tree_sitter_fusor/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json
tools/: generateType.ts
